# haskell-multi-armed-bandits

./: .gitignore  BinaryMABPlugin.cabal  LICENSE  MABOpt.hs  Main.hs  MultiArmedBanditTree.hs  README.md  mab.hs  todo.org  writeup.md
BinaryMAB/: Plugin.hs
experimentScripts/: expLoop.py  makeComparisons.py  nofibKeenessCompare  runSingleBenchmark.py  toRun
