name:                   Binary-MultiArmedBandit-Plugin
version:                0.1
build-type:             Simple
cabal-version:          >= 1.2

license:                MIT
License-file:           LICENSE
Author:                 Daniel Vainsencher
Maintainer:             Daniel Vainsencher <danielv@tx.technion.ac.il>

library
  build-depends:   base, ghc, pretty, random, transformers, ghc-paths, containers, split
  other-modules:   MultiArmedBanditTree, MABOpt
  exposed-modules: BinaryMAB.Plugin
 
